--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="125dp"
         android:textColor="@color/colorPrimaryDark"
         android:textAlignment="center"
         android:text="Tic-Tac-Toe"
@@ -26,7 +25,7 @@
         android:text="Play with device"
         android:background="@drawable/btnx"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"/>
+        android:layout_marginTop="250dp"/>
 
     <Button
         android:id="@+id/player"
@@ -35,7 +34,17 @@
         android:text="Play with Friend"
         android:layout_centerHorizontal="true"
         android:background="@drawable/btnx"
-        android:layout_marginTop="270dp"/>
+        android:layout_marginTop="320dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Developed by Raj Kishan"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:layout_marginBottom="15dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal" />
 
 
 </RelativeLayout>
